--- a/Draw/Controller/Share/ShareEditController.xib
+++ b/Draw/Controller/Share/ShareEditController.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="353693316"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -58,8 +57,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 113}, {320, 347}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="976250215"/>
+						<reference key="NSNextKeyView" ref="847839388"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -72,7 +70,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="239950230"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,12 +78,25 @@
 							<string key="NSResourceName">topwood@2x.png</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="847839388">
+						<reference key="NSNextResponder" ref="1033168711"/>
+						<int key="NSvFlags">-2147483356</int>
+						<string key="NSFrame">{{18, 113}, {285, 289}}</string>
+						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSNextKeyView" ref="976250215"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paper@2x.png</string>
+						</object>
+					</object>
 					<object class="IBUIImageView" id="13981569">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 396}, {307, 61}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="730877834"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -96,7 +106,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 5}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="637044409"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -133,7 +142,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 7}, {75, 31}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1026007545"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -154,8 +162,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 396}, {306, 61}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTcyNTQ5MDE5NiAwLjk3NjQ3MDU4ODIgMAA</bytes>
@@ -183,7 +189,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{31, 130}, {259, 259}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13981569"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -193,7 +198,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{51, 12}, {168, 21}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="7302159"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -229,7 +233,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 93}, {320, 40}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="304575801"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -243,7 +246,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 46}, {320, 48}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="980914031"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -252,7 +254,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="710874393"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -338,6 +339,14 @@
 					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">paperBackground</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="847839388"/>
+					</object>
+					<int key="connectionID">44</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">publish:</string>
 						<reference key="source" ref="7302159"/>
@@ -398,6 +407,7 @@
 							<reference ref="1026007545"/>
 							<reference ref="13981569"/>
 							<reference ref="730877834"/>
+							<reference ref="847839388"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -456,6 +466,11 @@
 						<reference key="object" ref="1026007545"/>
 						<reference key="parent" ref="1033168711"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">43</int>
+						<reference key="object" ref="847839388"/>
+						<reference key="parent" ref="1033168711"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -476,90 +491,15 @@
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="37.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">42</int>
+			<int key="maxID">44</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShareEditController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="infuseImageView">SynthesisView</string>
-						<string key="inputBackground">UIImageView</string>
-						<string key="myImageBackground">UIImageView</string>
-						<string key="myImageView">UIImageView</string>
-						<string key="patternBar">UIImageView</string>
-						<string key="patternsGallery">UIScrollView</string>
-						<string key="shareButton">UIButton</string>
-						<string key="shareTextField">UITextView</string>
-						<string key="shareTitleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="infuseImageView">
-							<string key="name">infuseImageView</string>
-							<string key="candidateClassName">SynthesisView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackground">
-							<string key="name">inputBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageBackground">
-							<string key="name">myImageBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageView">
-							<string key="name">myImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternBar">
-							<string key="name">patternBar</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternsGallery">
-							<string key="name">patternsGallery</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareButton">
-							<string key="name">shareButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTextField">
-							<string key="name">shareTextField</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTitleLabel">
-							<string key="name">shareTitleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShareEditController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SynthesisView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SynthesisView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -572,6 +512,7 @@
 			<string key="back@2x.png">{74, 74}</string>
 			<string key="dark_wood_bg@2x.png">{640, 960}</string>
 			<string key="normalpallets@2x.png">{640, 81}</string>
+			<string key="paper@2x.png">{640, 960}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 			<string key="wood_button.png">{16, 16}</string>
