--- a/Draw/Controller/Share/ShareEditController~iPad.xib
+++ b/Draw/Controller/Share/ShareEditController~iPad.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="491680879"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -58,8 +57,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{0, 246}, {768, 758}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="268363428"/>
+						<reference key="NSNextKeyView" ref="342134113"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -72,7 +70,6 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="350137839"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -81,12 +78,25 @@
 							<string key="NSResourceName">topwood@2x.png</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="342134113">
+						<reference key="NSNextResponder" ref="421574703"/>
+						<int key="NSvFlags">-2147483356</int>
+						<string key="NSFrame">{{35, 250}, {698, 625}}</string>
+						<reference key="NSSuperview" ref="421574703"/>
+						<reference key="NSNextKeyView" ref="268363428"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paper@2x.png</string>
+						</object>
+					</object>
 					<object class="IBUIImageView" id="289642412">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{7, 864}, {755, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="306897565"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -96,7 +106,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{14, 11}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="6438040"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -133,7 +142,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{571, 15}, {180, 67}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13410777"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -161,8 +169,6 @@
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{7, 864}, {754, 133}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTcyNTQ5MDE5NiAwLjk3NjQ3MDU4ODIgMAA</bytes>
@@ -188,9 +194,8 @@
 					<object class="IBUIImageView" id="268363428">
 						<reference key="NSNextResponder" ref="421574703"/>
 						<int key="NSvFlags">-2147483329</int>
-						<string key="NSFrame">{{89, 282.5}, {591, 565}}</string>
+						<string key="NSFrame">{{89, 282}, {591, 565}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="289642412"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -200,7 +205,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{122, 26}, {403, 45}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="342380466"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -236,7 +240,6 @@
 						<int key="NSvFlags">314</int>
 						<string key="NSFrame">{{0, 203}, {768, 87}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1018434614"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -250,7 +253,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{0, 100}, {768, 104}}</string>
 						<reference key="NSSuperview" ref="421574703"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="678441152"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -259,7 +261,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="426896309"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -345,6 +346,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">paperBackground</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="342134113"/>
+					</object>
+					<int key="connectionID">34</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="306897565"/>
 						<reference key="destination" ref="372490531"/>
@@ -404,6 +413,7 @@
 							<reference ref="426896309"/>
 							<reference ref="491680879"/>
 							<reference ref="350137839"/>
+							<reference ref="342134113"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -462,6 +472,11 @@
 						<reference key="object" ref="1018434614"/>
 						<reference key="parent" ref="421574703"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="342134113"/>
+						<reference key="parent" ref="421574703"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -480,6 +495,7 @@
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -487,85 +503,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">34</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShareEditController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="infuseImageView">SynthesisView</string>
-						<string key="inputBackground">UIImageView</string>
-						<string key="myImageBackground">UIImageView</string>
-						<string key="myImageView">UIImageView</string>
-						<string key="patternBar">UIImageView</string>
-						<string key="patternsGallery">UIScrollView</string>
-						<string key="shareButton">UIButton</string>
-						<string key="shareTextField">UITextView</string>
-						<string key="shareTitleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="infuseImageView">
-							<string key="name">infuseImageView</string>
-							<string key="candidateClassName">SynthesisView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackground">
-							<string key="name">inputBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageBackground">
-							<string key="name">myImageBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="myImageView">
-							<string key="name">myImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternBar">
-							<string key="name">patternBar</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="patternsGallery">
-							<string key="name">patternsGallery</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareButton">
-							<string key="name">shareButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTextField">
-							<string key="name">shareTextField</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shareTitleLabel">
-							<string key="name">shareTitleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShareEditController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SynthesisView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SynthesisView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -578,6 +518,7 @@
 			<string key="back@2x.png">{74, 74}</string>
 			<string key="dark_wood_bg@2x.png">{640, 960}</string>
 			<string key="normalpallets@2x.png">{640, 81}</string>
+			<string key="paper@2x.png">{640, 960}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg@2x.png">{640, 960}</string>
 			<string key="wood_button.png">{16, 16}</string>
